# meshbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: docker-build.yml
data/: system_prompt.txt
examples/: basic_usage.py
knowledge/: README.md
prompts/: default.md  example.txt  ipnet.md  ipnet.txt
src/meshbot/: __init__.py  agent.py  config.py  knowledge.py  main.py  memory.py  meshcore_interface.py  message_router.py  storage.py
src/meshbot/storage/: __init__.py  adverts.py  base.py  messages.py  nodes.py
src/meshbot/tools/: __init__.py  conversation.py  fun.py  logging_wrapper.py  network.py  nodes.py  query.py  utility.py  weather.py
tests/: test_basic.py  test_tools.py
