[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshbot"
version = "0.1.0"
description = "AI agent for MeshCore network communication"
readme = "README.md"
authors = [{name = "IPNet Mesh", email = "info@ipnt.uk"}]
license = {text = "GPL-3.0-or-later"}
keywords = ["ai", "mesh-network", "meshcore", "chatbot", "agent"]
urls = {Homepage = "https://github.com/ipnet-mesh/meshbot", Repository = "https://github.com/ipnet-mesh/meshbot", Issues = "https://github.com/ipnet-mesh/meshbot/issues"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[openai]>=0.0.14",
    "pydantic>=2.0.0",
    "meshcore>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
meshbot = "meshbot.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "meshcore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "memori.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["meshbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
